--- a/src/main/resources/templates/live/input.html
+++ b/src/main/resources/templates/live/input.html
@@ -40,17 +40,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">直播状态</label>
-                        <div class="layui-input-block">
-                            <select name="liveStatus" lay-filter="selectFilter">
-                                <option value="">请选择</option>
-                                <option value="0" th:selected="${ehbLiveBroadcast.liveStatus == 0}">即将开播</option>
-                                <option value="1" th:selected="${ehbLiveBroadcast.liveStatus == 1}">直播中</option>
-                                <option value="2" th:selected="${ehbLiveBroadcast.liveStatus == 2}">直播结束</option>
-                            </select>
-                        </div>
-                    </div>
+<!--                    <div class="layui-form-item">-->
+<!--                        <label class="layui-form-label">直播状态</label>-->
+<!--                        <div class="layui-input-block">-->
+<!--                            <select name="liveStatus" lay-filter="selectFilter">-->
+<!--                                <option value="">请选择</option>-->
+<!--                                <option value="0" th:selected="${ehbLiveBroadcast.liveStatus == 0}">即将开播</option>-->
+<!--                                <option value="1" th:selected="${ehbLiveBroadcast.liveStatus == 1}">直播中</option>-->
+<!--                                <option value="2" th:selected="${ehbLiveBroadcast.liveStatus == 2}">直播结束</option>-->
+<!--                            </select>-->
+<!--                        </div>-->
+<!--                    </div>-->
                     <div class="layui-form-item">
                         <label class="layui-form-label">直播预告</label>
                         <div class="layui-input-block">
