--- a/src/main/resources/static/HTML/css/style.css
+++ b/src/main/resources/static/HTML/css/style.css
@@ -77,9 +77,9 @@
 .g_about-nav{margin-top: 0.2rem; width: 100%; height: 2rem;}
 .g_nav-box{width: 100%; height: 2rem; box-shadow: 0px 6px 10px rgba(0,0,0,0.04); background: #fff; z-index: 1000;}
 .g_nav-box ul{overflow: hidden;}
-.g_nav-box ul li{height: 1rem; border-bottom: 1px solid #ebebeb; float: left; width: 2.3rem; position: relative;}
+.g_nav-box ul li{height: 1rem; border-bottom: 1px solid #ebebeb; float: left; width: 30.6%; position: relative;}
 .g_nav-box ul li:nth-child(2),
-.g_nav-box ul li:nth-child(5){width: 2.9rem;}
+.g_nav-box ul li:nth-child(5){width: 38.8%;}
 .g_nav-box ul li:nth-child(n+4){border-bottom: 0 none;}
 .g_nav-box ul li a{display: block; width: 100%; text-align: center; height: 1rem; line-height: 1rem; font-size: 0.28rem; color: #000; position: relative;}
 .g_nav-box ul li::after{content: ''; display: block; width: 1px; height: 0.37rem; background: #ebebeb; position: absolute; right: 0; top: 50%; margin-top: -0.18rem;}
@@ -222,10 +222,10 @@
 
 
 /*邀请好友*/
-.g_invitation{width: 100%; overflow: hidden; position: relative;}
-.g_invitation img{display: block; width: 100%;}
-.g_btn-invitation{display: block; width: 4.44rem; height: 0.82rem; line-height: 0.82rem; text-align: center; border-radius: 0.82rem; font-size: 0.32rem; color: #fff; background: #4ac4f3; position: absolute; left: 50%; margin-left: -2.22rem; bottom: 1.4rem;}
-
+.g_invitation{width: 100%; overflow: hidden; position: absolute; height: 100%; box-sizing: border-box; -webkit-box-sizing: border-box; padding: 0 0.3rem;}
+.g_invitation>img{display: block; width:100%; margin: 0 auto;}
+.g_btn-invitation{display: block; width: 2.38rem; height: 2.37rem; border-radius: 2.38rem; position: absolute; left: 50%; margin-left: -1.19rem; top: 9.9rem;}
+.g_btn-invitation img{display: block; width: 2.38rem; height: 2.37rem; border-radius: 2.38rem;}
 
 
 
@@ -265,4 +265,12 @@
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
   opacity: 1;
+}
+
+
+@media only all and (max-width:375px){
+	.g_btn-invitation{top: 9.9rem;}	
+}
+@media only all and (max-width:320px){
+	.g_btn-invitation{top: 9.9rem;}	
 }
