--- a/src/main/resources/templates/article/input.html
+++ b/src/main/resources/templates/article/input.html
@@ -18,7 +18,7 @@
                     <div class="layui-upload">
                         <button type="button" class="layui-btn" id="test1">上传</button>
                         <div class="layui-upload-list" style="margin-left: 100px;">
-                            <img class="layui-upload-img" id="demo1" th:src="*{headpicture}">
+                            <img class="layui-upload-img" id="demo1" th:src="*{headpicture}" width="200">
                         </div>
                     </div>
                 </div>
