--- a/src/main/resources/templates/banner/input.html
+++ b/src/main/resources/templates/banner/input.html
@@ -28,17 +28,17 @@
                         <div class="layui-upload">
                             <button type="button" class="layui-btn" id="test2">上传图片</button>
                             <div class="layui-upload-list">
-                                <img class="layui-upload-img" id="demo1" th:src="*{imgurl}">
+                                <img class="layui-upload-img" id="demo1" th:src="*{imgurl}" width="200">
                                 <p id="demoText"></p>
                             </div>
                         </div>
                     </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">内容</label>
-                        <div class="layui-input-block">
-                            <input type="text" th:field="*{content}" required  lay-verify="required" placeholder="请输入内容" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
+<!--                    <div class="layui-form-item">-->
+<!--                        <label class="layui-form-label">内容</label>-->
+<!--                        <div class="layui-input-block">-->
+<!--                            <input type="text" th:field="*{content}" required  lay-verify="required" placeholder="请输入内容" autocomplete="off" class="layui-input">-->
+<!--                        </div>-->
+<!--                    </div>-->
                     <div class="layui-form-item">
                         <label class="layui-form-label">排序</label>
                         <div class="layui-input-block">
@@ -55,13 +55,16 @@
                             </select>
                         </div>
                     </div>
-                    <div class="layui-form-item" style="display: none;" id="nlid">
+                    <div class="layui-form-item" id="nlid">
                         <label class="layui-form-label">内联跳转id</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{nlid}" placeholder="请输入排序" autocomplete="off" class="layui-input">
+                            <select name="nlid" lay-search="">
+                                <option value="">直接选择或搜索选择</option>
+                                <option th:each="ehbExhibitor,memberStat:${ehbExhibitors}" th:value="${ehbExhibitor.id}" th:text="${ehbExhibitor.enterprisename}" th:selected="${ehbExhibitor.id == ehbBanner.nlid}"></option>
+                            </select>
                         </div>
                     </div>
-                    <div class="layui-form-item" style="display: none;" id="linkurl" >
+                    <div class="layui-form-item" id="linkurl" >
                         <label class="layui-form-label">外联链接地址</label>
                         <div class="layui-input-block">
                             <input type="text" th:field="*{linkurl}" placeholder="请输入链接地址" autocomplete="off" class="layui-input">
@@ -83,9 +86,20 @@
             upload = layui.upload,
             $ = layui.jquery;
 
+            $('#nlid').hide();
+            $('#linkurl').hide();
+
+            if($("select[name=nw]").val() == '1'){
+                $('#nlid').show();
+                $('#linkurl').hide();
+            }else if($("select[name=nw]").val() == '2'){
+                $('#nlid').hide();
+                $('#linkurl').show();
+            }
+
             //下拉框监听事件
             form.on('select(selectFilter)', function(data){
-                if(data.value == 1){//审核不通过
+                if(data.value == 1){
                     $('#nlid').show();
                     $('#linkurl').hide();
                 }else if(data.value == 2){
