--- a/src/main/resources/templates/banner/input.html
+++ b/src/main/resources/templates/banner/input.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="layui-form-item" id="nlid">
-                        <label class="layui-form-label">内联跳转id</label>
+                        <label class="layui-form-label">站内跳转展商</label>
                         <div class="layui-input-block">
                             <select name="nlid" lay-search="">
                                 <option value="">直接选择或搜索选择</option>
