--- a/src/main/resources/static/HTML/css/style.css
+++ b/src/main/resources/static/HTML/css/style.css
@@ -73,7 +73,7 @@
 /*关于*/
 .g_about-container{padding: 0.3rem 0.3rem 0.66rem; font-size: 0.28rem; color: #4c4c4c; line-height: 0.48rem; border-bottom: 0.12rem solid #f7f7f7;}
 .g_luokuan{text-align: right; margin-top: 0.2rem;}
-.g_about-container video{display: block; width: 100%; height: 3.88rem; margin-top: 0.42rem; object-fit:fill;}
+.g_about-container .g_about-img{display: block; width: 100%;  margin-top: 0.42rem;}
 .g_about-nav{margin-top: 0.2rem; width: 100%; height: 2rem;}
 .g_nav-box{width: 100%; height: 2rem; box-shadow: 0px 6px 10px rgba(0,0,0,0.04); background: #fff; z-index: 1000;}
 .g_nav-box ul{overflow: hidden;}
