--- a/src/main/resources/templates/advertising/input.html
+++ b/src/main/resources/templates/advertising/input.html
@@ -93,6 +93,27 @@
             });
 
             form.on('submit(submitFrom)', function(data){
+                //排序
+                var sort = data.field.sort;
+                if(!/^[0-9]+?$/.test(sort)){
+                    layer.msg('排序必须为数字，请重填！',core.showtime);
+                    return false;
+                }
+                if(core.isEmpty(data.field.picture)){
+                    layer.msg('图片未上传！',core.showtime);
+                    return false;
+                }
+                if(data.field.nw == '1'){
+                    if(core.isEmpty(data.field.position)){
+                        layer.msg('内联ID未填写！',core.showtime);
+                        return false;
+                    }
+                }if(data.field.nw == '2'){
+                    if(core.isEmpty(data.field.url)){
+                        layer.msg('外联链接未填写！',core.showtime);
+                        return false;
+                    }
+                }
                 var resultData = core.ajax('/platform/advertising/saveOrUpdate',false,'POST',data.field);
                 if(resultData!=false){
                     parent.layer.msg('操作成功',core.showtime);
