--- a/src/main/resources/templates/banner/input.html
+++ b/src/main/resources/templates/banner/input.html
@@ -113,6 +113,12 @@
 
             form.on('submit(submitFrom)', function(data){
                 console.log(JSON.stringify(data.field));
+                //排序
+                var sort = data.field.sort;
+                if(!/^[0-9]+?$/.test(sort)){
+                    layer.msg('排序必须为数字，请重填！',core.showtime);
+                    return false;
+                }
                 if(core.isEmpty(data.field.imgurl)){
                     layer.msg('图片未上传！',core.showtime);
                     return false;
