--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -105,7 +105,7 @@
             </ul>
             <div class="layui-tab-content" style="width: 100%;height: 100%;">
                 <div class="layui-tab-item layui-show">
-                    <iframe src="/platform/crmUser/userList" width="100%" height="100%;" frameborder="0"></iframe>
+                    <iframe src="/platform/index/list" width="100%" height="100%;" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
