--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -7,11 +7,8 @@
     <script type="text/javascript" th:src="@{/static/tools/layui/layui.js}"></script>
     <script type="text/javascript" th:src="@{/static/js/base.js}"></script>
     <script th:inline="javascript">
-        basePath = [[${session.basePath}]];//项目基础路径
-        // alert("basePath:"+basePath);
-
-        loginUserInfo = [[${session.loginUserInfo}]];//登录者信息保存
-        // alert("loginUserInfo:"+JSON.stringify(loginUserInfo));
+        // basePath = [[${session.basePath}]];//项目基础路径
+        // loginUserInfo = [[${session.loginUserInfo}]];//登录者信息保存
     </script>
 </head>
 <body>
