--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -148,35 +148,11 @@
 
         $('.layui-tab-item').attr("style","height: "+$(window).height()+"px;")
 
-        $('#nickname').text(loginUserInfo.name);
-        $('#detail').find("input").eq(0).attr("value",loginUserInfo.name);
-        $('#detail').find("input").eq(1).attr("value",loginUserInfo.loginname);
-        $('#detail').find("input").eq(2).attr("value",loginUserInfo.roleName);
+        // $('#nickname').text(loginUserInfo.name);
+        // $('#detail').find("input").eq(0).attr("value",loginUserInfo.name);
+        // $('#detail').find("input").eq(1).attr("value",loginUserInfo.loginname);
+        // $('#detail').find("input").eq(2).attr("value",loginUserInfo.roleName);
 
-        // var crmAuzDTOs = loginUserInfo.crmAuzDTOs;
-        // var level1= "";//一级菜单HTML
-        // for(var i=0;i<crmAuzDTOs.length;i++){
-        //     if(crmAuzDTOs[i].level == 2){//取出所有一级菜单
-        //         if(crmAuzDTOs[i].url!=null){//一级菜单有跳转的
-        //             level1 +='<li class="layui-nav-item">' +
-        //                 '<a href="javascript:;" menuid="'+crmAuzDTOs[i].menu_id+'" menuurl=\'<iframe src="http://localhost:8400'+crmAuzDTOs[i].url+'" width="100%" height="580px;" frameborder="0"></iframe>\'>'+crmAuzDTOs[i].name+'</a></li>';
-        //         }else{//一级菜单没有跳转的
-        //             level1 +='<li class="layui-nav-item"><a href="javascript:;">'+crmAuzDTOs[i].name+'</a><dl class="layui-nav-child">';
-        //             var level2 ='';//二级菜单HTML
-        //             for(var j=0;j<crmAuzDTOs.length;j++){
-        //                 //取出每一个一级菜单的子二级菜单
-        //                 if(crmAuzDTOs[j].level == 3 && crmAuzDTOs[j].parent_id == crmAuzDTOs[i].menu_id){
-        //                     level2 += '<dd><a href="javascript:;" menuid="'+crmAuzDTOs[j].menu_id+'" menuurl=\'<iframe src="http://localhost:8400'+crmAuzDTOs[j].url+'" width="100%" height="580px;" frameborder="0"></iframe>\'>'+crmAuzDTOs[j].name+'</a></dd>';
-        //                 }
-        //             }
-        //             level1 += level2;
-        //             level1 +='</dl></li>';
-        //         }
-        //     }
-        // }
-        // $('.layui-nav-tree').html(level1);//写入页面元素
-        //
-        // element.render();//重新对动态生成的菜单进行渲染
         //触发事件
         var active = {
             tabAdd: function(title,id,content){
